samples/deny-ports-nsg/tests/nsg-allow-ssh-and-rdp-deny.json
{
    "name": "nsg-app",
    "type": "Microsoft.Network/networkSecurityGroups",
    "location": "northeurope",
    "properties": {
        "securityRules": [
            {
                "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                "properties": {
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "23",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "10.0.0.4",
                    "access": "Allow",
                    "priority": 4096,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                }
            },
            {
                "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                "properties": {
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "33890",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "10.0.0.4",
                    "access": "Allow",
                    "priority": 4096,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                }
            }
        ]
    }
}
